[tool.poetry]
name = "samar"
version = "0.1.0"
description = ""
authors = ["Minghong Li <lmh0066@outlook.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.2"
fancyimpute = "^0.7.0"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
click = "^8.1.7"
openpyxl = "^3.1.2"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
