[tool.poetry]
name = "samar"
version = "0.1.0"
description = ""
authors = ["Minghong Li <lmh0066@outlook.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.2"
fancyimpute = "^0.7.0"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
click = "^8.1.7"
openpyxl = "^3.1.2"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
flake8-isort = "^6.1.1"
poethepoet = "^0.24.4"

# Borrowed from: https://github.com/psf/black/blob/master/pyproject.toml
[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poe.tasks]
black  = "black ."
isort  = "isort ."
format = ["black", "isort"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
